# drift-doctor

./: .driftdoctor.toml.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  data-quality.yml.example  publish.yml
demo/: api_demo.ipynb  current.csv  generate_demo_data.py  make_gif.py  reddit_post.md  reference.csv  report_full.html  screenshot.py
drift_doctor/: __init__.py  api.py  cli.py  config.py  detector.py  diagnose.py  notifier.py  profiler.py  reporter.py  reporter_html.py  snapshot.py
tests/: test_api.py  test_cli.py  test_config.py  test_detector.py  test_notifier.py  test_profiler.py  test_reporter_html.py
