[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drift-doctor"
version = "0.5.0"
description = "CLI data drift watchdog with AI diagnosis"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "pyarrow>=14.0",
    "typer>=0.12",
    "rich>=13.0",
    "anthropic>=0.28",
    "numpy>=1.26",
]

[project.scripts]
drift-doctor = "drift_doctor.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["drift_doctor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
